# qc

./: .gitignore  README.md  docker-compose.yml  start-infrastructure.sh
backend/: Dockerfile  pyproject.toml
backend/scripts/: migrate_initial_data.py
backend/src/: __init__.py  main.py  test_container_manager.py  test_container_manager_new_device.py  test_migration.py  test_sync_service.py
backend/src/api/: routes.py  sse.py
backend/src/models/: database.py  metrics.py  rules.py
backend/src/services/: container_manager.py  database.py  influxdb_writer.py  metrics_collector.py  router_manager.py  sync_service.py
backend/src/utils/: docker_exec.py  parsers.py
clients/: Dockerfile  entrypoint.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BandwidthChart.tsx  ClusterManager.tsx  ConnectionList.tsx  Dashboard.tsx  DevicePills.tsx  PacketStats.tsx  RulesPanel.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/services/: api.ts
frontend/src/types/: cluster.ts  metrics.ts
router/: Dockerfile  entrypoint.sh
router/config/: default_rules.json
router/scripts/: apply_rules.sh  init_tc.sh  restore_rules.sh
